      argument passed via \code{...}.

      \item Dynamic help now does a much better job rendering package
      \file{DESCRIPTION} metadata.

      \item \code{Rprof()} gains an \code{event} argument and support
      for elapsed (real) time profiling on Unix (\PR{18076}).

      \item \code{filled.contour()} gains \code{key.border} argument.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item System valgrind headers are required to use
      \command{configure} option \option{--with-valgrind-instrumentation}
      with value \code{1} or \code{2}.

      \item \command{configure} will warn if it encounters a 32-bit
      build, as that is nowadays almost untested.

      \item Enviroment variable \env{R_SYSTEM_ABI} is no longer used and
      so no longer recorded in \file{etc/Renviron} (it was not on Windows
      and was only ever used when preparing package \pkg{tools}).

      \item There is an experimental \command{configure} option
      \option{--with-libdeflate-compression} which uses
      \code{libdeflate} rather than \code{libz} to (de)compress \R
      objects in lazy-load databases, if the \code{libdeflate} library
      and headers are available.  Typically tasks spend up to 5\% of
      their time on such operations, although creating lazy-data
      databases is one of the exceptions.

      \emph{pro tem} this can also be selected by setting environment
      variable \env{R_USE_LIBDEFLATE_FOR_LAZYLOAD} to \code{yes}.
    }
  }

  %% \subsection{PACKAGE INSTALLATION}{
  %%   \itemize{
  %%     \item .
  %%   }
  %% }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} notes when S4-style exports are used
      without declaring a strong dependence on package \pkg{methods}.

      \item \code{tools::checkRd()} (used by \command{R CMD check})
      detects more problems with \verb{\Sexpr}-based dynamic content,
      including bad nesting of \verb{\Sexpr}s and invalid arguments.
